--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 .mainContainer {
-    background-color: #072642 ;
-    color: #A7FC00;
+    background-color: #eec0c6 ;
+    color: #11100f;
     display: flex;
     justify-content: center;
     align-items: center;
