--- a/css/hlavni.css
+++ b/css/hlavni.css
@@ -1,5 +1,6 @@
 
 
+
 .header {
     background-color: #ed217c;
     color: #eec0c6;
@@ -8,6 +9,9 @@
     justify-content: space-around;
     text-align: center;
     align-items: center;
+    font-family: 'Sedgwick Ave Display', cursive;
+    font-size: xx-large;
+    
 } 
 
 .menu {
@@ -17,16 +21,58 @@
     text-align: center;
     align-items: center;
     justify-content: space-around;
+    font-family: 'Roboto Slab', serif;
     
 }
 
 .hlavni {
     background-color: #eec0c6;
     color: black;
-
+    font-family: 'Roboto Slab', serif;
+    display: flex;
+    grid-template-areas:
+        'soutez'
+        'aktuality' ;
+        
 }
+    
 
 .footer {
-    background-color: #ed217c;
-    color: #eec0c6;
+    background-color: #c4d6b0;
+    color: black;
+    font-family: 'Roboto Slab', serif;
 }
+
+#logoimg {
+    height: 250px;
+}
+
+#ulsoutez {
+    list-style-type: square;
+  }
+
+
+
+.column {
+    width: 50%;
+    margin: 20px;
+    padding: 15px;
+    background-color: #c4d6b09b;
+    border: 1000px;
+    border: 4px solid #ed217c;
+    padding: 20px;
+    width: 1fr;
+  }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+    }
+  }
