--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Roboto Slab', serif;
 }
 
 .con {
     display: grid;
-    grid-template-rows: 2fr 1fr auto 2fr;
+    grid-template-rows: 200px 50px auto 100px;
     flex-direction: row;
     height: 100vh;
+    font-family: 'Roboto Slab', serif;
    
 }
