--- a/src/onas/onas-main.css
+++ b/src/onas/onas-main.css
@@ -4,8 +4,8 @@ body {
     padding: 0 32px;
 }
 h2 {
-    padding: 0 40px;
-    font-size:30px;
+    padding: 0 0px;
+    font-size: 30px;
     margin: 0px;
 }
 h1 {
@@ -20,10 +20,14 @@ p {
 .mainContainer  {
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-start;
 }
 
 .paragraphContainer {
     width: 40%;
     padding:10px
+}
+.font-i {
+    font-style: italic;
 }
 
