--- a/src/tutorialy/tutorial_main.css
+++ b/src/tutorialy/tutorial_main.css
@@ -12,3 +12,26 @@ h1 {
 .tutorialyimg {
  height: 200px;
 }
+
+.nadpis { 
+    color: #ed217c ;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
+    font-family: 'Sedgwick Ave Display', cursive;
+    font-size: 60PX;
+
+}
+
+.menutut {
+    background-color: #c4d6b0;
+    display: flex;
+    flex-direction: row;
+    height: 60px;
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
+    font-family: 'Roboto Slab', serif;
+}
