--- a/src/tutorialy/tutorial_main.css
+++ b/src/tutorialy/tutorial_main.css
@@ -1,12 +1,11 @@
 body {
     background-color: #eec0c6 ;
     color: #11100f;
-    padding: 0 32px;
+    margin: 0px;
 }
 
 h1 {
     text-align: center;
-    padding:2%
 }
 
 .tutorialyimg {
@@ -26,7 +25,7 @@ h1 {
 }
 
 .menutut {
-    background-color: #c4d6b0;
+    background-color: #f03f8e;
     display: flex;
     flex-direction: row;
     height: 60px;
