--- a/src/onas/onas-main.css
+++ b/src/onas/onas-main.css
@@ -4,7 +4,7 @@ body {
     padding: 0 32px;
 }
 h2 {
-    padding: 0 0px;
+    padding: 0 1%;
     font-size: 30px;
     margin: 0px;
 }
@@ -21,6 +21,7 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+    
 }
 
 .paragraphContainer {
@@ -31,3 +32,6 @@ p {
     font-style: italic;
 }
 
+.Container {
+
+}
