--- a/css/hlavni.css
+++ b/css/hlavni.css
@@ -11,6 +11,8 @@
     align-items: center;
     font-family: 'Sedgwick Ave Display', cursive;
     font-size: xx-large;
+    position: sticky;
+    top: 50px;
     
 } 
 
@@ -22,6 +24,8 @@
     align-items: center;
     justify-content: space-around;
     font-family: 'Roboto Slab', serif;
+    position: sticky;
+    top: 0;
     
 }
 
@@ -51,7 +55,16 @@
     list-style-type: square;
   }
 
+  #ulaktuality {
+    list-style-type: square;
+  }
 
+#betuskaaborek {
+  display: flex;
+  padding-left: 50%;
+  flex-direction: row;
+  align-items: center;
+}
 
 .column {
     width: 50%;
@@ -62,6 +75,14 @@
     border: 4px solid #ed217c;
     padding: 20px;
     width: 1fr;
+  }
+
+  
+
+  .columnaktuality {
+    width: 1fr;
+    display: flex;
+
   }
   
   .row:after {
