--- a/css/hlavni.css
+++ b/css/hlavni.css
@@ -45,6 +45,8 @@
     background-color: #c4d6b0;
     color: black;
     font-family: 'Roboto Slab', serif;
+    align-items: center;
+    text-align: center;
 }
 
 #logoimg {
