--- a/src/tutorialy/tutorial_main.css
+++ b/src/tutorialy/tutorial_main.css
@@ -25,7 +25,7 @@ h1 {
 
 .noname {
     display: flex;
-
+    font-family: 'Roboto Slab', serif; 
     
 }
 
@@ -48,11 +48,15 @@ h1 {
     color: #eec0c6;
     display: flex;
     flex-direction: row;
-    height: 60px;
+    height: 50px;
     text-align: center;
     align-items: center;
     justify-content: space-around;
     font-family: 'Roboto Slab', serif;
     position: sticky;
     top: 0;
+}
+
+.tutcelek {
+    font-family: 'Roboto Slab', serif;
 }
