tutorial_nadpis_pozadi

--- a/src/tutorialy/tutorial_main.css
+++ b/src/tutorialy/tutorial_main.css
@@ -45,7 +45,7 @@ h1 {
 
 .tutnadpis {
 
-    background-color: #eec0c6;
+    background-color: #c4d6b0;
     color: #ed217c;
     display: flex;
     flex-direction: row;
