--- a/src/onas/onas-main.css
+++ b/src/onas/onas-main.css
@@ -72,8 +72,8 @@ display: flex;
 
 .nadpisonas {
 
-    background-color: #c4d6b0;
-    color: #ed217c;
+    background-color: #c4d6b0;#ed217c;
+    color: #c4d6b0;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -86,6 +86,7 @@ display: flex;
 
 #logoimgonas {
     height: 250px;
+    
 }
 
 #velikostnadpis {
