--- a/src/onas/onas-main.css
+++ b/src/onas/onas-main.css
@@ -57,7 +57,7 @@ display: flex;
 }
 
 .onasmenu {
-    background-color: #f03f8e;
+    background-color: #c4d6b0;
     color: #eec0c6;
     display: flex;
     flex-direction: row;
@@ -72,8 +72,8 @@ display: flex;
 
 .nadpisonas {
 
-    background-color: #c4d6b0;#ed217c;
-    color: #c4d6b0;
+    background-color: #ed217c;
+    color: #eec0c6;;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -94,7 +94,7 @@ display: flex;
   }
 
 .footeronas {
-    background-color: #c4d6b0;
+    background-color: #eec0c6;
     color: black;
     font-family: 'Roboto Slab', serif;
     align-items: center;
