--- a/src/sluzby/sluzby_main.css
+++ b/src/sluzby/sluzby_main.css
@@ -103,6 +103,8 @@ p {
     background-color: #eec0c6;
     color: black;
     font-family: 'Roboto Slab', serif;
+    display: flex;
+    flex-direction: column;
    
 }
 
