sluzby_zmena_barev

--- a/src/sluzby/sluzby_main.css
+++ b/src/sluzby/sluzby_main.css
@@ -84,7 +84,7 @@ p {
 
 .slunadpis {
 
-    background-color: #f03f8e;
+    background-color: #ed217c;
     color: #eec0c6;
     display: flex;
     flex-direction: row;
