--- a/src/tutorialy/tutorial_main.css
+++ b/src/tutorialy/tutorial_main.css
@@ -23,7 +23,7 @@ h1 {
  float: left;
 }
 
-.noname {
+.ramecek {
     display: flex;
     font-family: 'Roboto Slab', serif; 
     border-style: solid;
