--- a/src/sluzby/sluzby_main.css
+++ b/src/sluzby/sluzby_main.css
@@ -104,6 +104,7 @@ p {
 #logoimgslu {
     height: 250px;
     padding-right: 20px;
+    padding-left: 100px;
 
 }
 
@@ -129,3 +130,4 @@ p {
     padding: 0px;
     margin: 0px;
 }
+
