--- a/css/hlavni.css
+++ b/css/hlavni.css
@@ -103,3 +103,100 @@
       width: 100%;
     }
   }
+
+
+
+
+
+
+
+  * {
+    box-sizing: border-box;
+  }
+  
+  /* Position the image container (needed to position the left and right arrows) */
+  .galerie {
+    position: relative;
+    padding: none;
+    margin: none;
+    background-color: #ed217c;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Add a pointer when hovering over the thumbnail images */
+  .cursor {
+    cursor: pointer;
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: #c4d6b0;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+    background-color: #ed217dc8;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #152502;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* Container for image text */
+  .caption-galerie {
+    text-align: center;
+    background-color: #ed217c;
+    padding: 2px 16px;
+    color: #eec0c6;
+  }
+  
+  .rowgaleire:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Six columns side by side */
+  .columngalerie {
+    float: left;
+    width: 16.66%;
+  }
+  
+  /* Add a transparency effect for thumnbail images */
+  .demo {
+    opacity: 0.6;
+    display: block;
+  }
+  
+  .active,
+  .demo:hover {
+    opacity: 1;
+  }
