--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 
 .con {
     display: grid;
-    grid-template-rows: 50px 200px auto 100px;
+    grid-template-rows: 50px 200px auto auto 100px;
     flex-direction: row;
     height: 100vh;
 }
