--- a/src/onas/onas-main.css
+++ b/src/onas/onas-main.css
@@ -77,7 +77,7 @@ p {
     color: #eec0c6;;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     text-align: center;
     align-items: center;
     font-family: 'Sedgwick Ave Display', cursive;
@@ -87,13 +87,11 @@ p {
 
 #logoimgonas {
     height: 250px;
-    
     padding-right: 20px;
-
-    
 }
 
 #velikostnadpis {
+   padding-left:100px ;
     font-size: 60px;
   }
 
