--- a/src/onas/onas-main.css
+++ b/src/onas/onas-main.css
@@ -87,11 +87,11 @@ p {
 
 #logoimgonas {
     height: 250px;
-    padding-right: 20px;
+    padding-right: 3%;
 }
 
 #velikostnadpis {
-   padding-left:100px ;
+   padding-left:10% ;
     font-size: 60px;
   }
 
