--- a/src/sluzby/sluzby_main.css
+++ b/src/sluzby/sluzby_main.css
@@ -9,6 +9,7 @@ h1 {
     text-align: center;
     padding: 2%;
     font-size: 60px;
+    padding-left:10% ;
 }
 
 h2 {
@@ -95,7 +96,7 @@ p {
     color: #eec0c6;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     text-align: center;
     align-items: center;
     font-family: 'Sedgwick Ave Display', cursive;
@@ -103,8 +104,7 @@ p {
 
 #logoimgslu {
     height: 250px;
-    padding-right: 20px;
-    padding-left: 60px;
+    padding-right: 3%;
 
 }
 
