ikona co skoro nefunguje

--- a/css/hlavni.css
+++ b/css/hlavni.css
@@ -121,6 +121,7 @@
     padding: none;
     margin: none;
     background-color: #ed217c;
+    font-family:  'Roboto Slab', serif;
   }
   
   /* Hide the images by default */
